src/objects/Ludus_Point__c.object
<CustomObject>
    <fields>
        <fullName>Compound_Key__c</fullName>
        <externalId>true</externalId>
        <label>Compound Key</label>
        <length>37</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Origin_Type__c</fullName>
        <label>Origin Type</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Origin__c</fullName>
        <label>Origin</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Points__c</fullName>
        <label>Points</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ludus Rule</label>
        <referenceTo>Ludus_Rule__c</referenceTo>
        <relationshipLabel>Ludus Points</relationshipLabel>
        <relationshipName>Ludus_Points</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Ludus_Points</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Ludus Point</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Ludus Point Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Ludus Points</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>